shopping.css
body {
    margin: 0px;

}



/* Nav Bar and Title */

nav {

    background-color: #FFB801;
    text-align: center;
}

nav > #select-tabs {
    background-color: #FFC634;
    line-height: 40px;
}

nav > #select-tabs > a {
    display: inline;
    margin: 40px;
    font-family: kalam;
    font-size: 20px;

    color: black;
    text-decoration: none;

}

nav > #select-tabs > a:hover {
    color: #288B6D;
    text-decoration: underline;
}

nav > #select-tabs > .selected-tab {
    color: #2B9575;
}

h1 {
    font-family: pacifico;
    font-size: 60px;
    margin: auto;
    line-height: 120px;
    color: white;
    font-weight: lighter;
}

.bee-gif {
    position: absolute;
    left: 20px;
    top: 30px;
    z-index: 10;
    z-index: 10;

}

/* /Nav Bar and Title */

/* footer */

.container {
    position: relative;
    flex-grow: 1;
}

footer {
    background-color: #BDD4CE;
    text-align: center;
    padding: 20px;
    position: relative;
    display: flex;
    height: 25px;


    
}

footer .content {
    max-width: 800px;
    margin: 0 auto 25px ;
    text-align: center;
  
}

footer h2 {
    margin-top: 0;
    font-size: 40px;
    color:#2B9575;
    font-family: sriracha;
}
footer p {
    margin: 0;
    font-family: kalam; 
    font-size: 25px;
    
}

a {
    color: #1c6650;
    text-decoration: underline;
}

a:hover {
    color: #2c8f71;
}

.footer-bottom {
    display: flex;
    justify-content: space-between; 
    width: 100%;  
}

/* /footer */

/* New styles for the shopping page */

.shopping-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 60px;


    
}

/* Image zoom in when hovered */
.item > img:hover {
    transform: scale(1.025);
    transition: linear 0.2s;

}  
/* Image zoom in when hovered */

.item {
    width: calc(33.333% - 20px);
    box-sizing: border-box;
    margin: 10px;
    margin-top: 25px;
    text-align: center;
}

.item img {
    height: 300px;
    width: auto;
    border-radius: 10px;
    object-fit: cover;
}

.item p {
    margin: 10px 0;
    font-size: 16px;
    font-family: 'Verdana', sans-serif;

}

.shopping-link {
    display: inline-block;
    margin-top: 10px;
    padding: 10px 20px;
    background-color: #007bff;
    color: #fff;
    text-decoration: none;
    border-radius: 5px;
    font-family: 'Verdana', sans-serif;


}
.shopping-link:hover {
    background-color:#035dbd;
    color: #fff;

}

#shop-sorter {
    background-color: #2c8f71;
    width: 200px;
    height: 40px;
    display: flex;
    align-items: center;
    
    position: absolute; /*make relative*/
    left: 0px;
    top: 160px;

    font-family: sriracha;
    
    border-style: solid;
    border-color:rgb(47, 153, 121);
    box-sizing: border-box;

    z-index: 10;
}

#shop-filter-all {
    opacity: 50%;
    transition: opacity 0.25s ease;
}

#shop-filter-all:hover {
    opacity: 100%;
}

#shop-sorter > h2 {
    font-size: medium;
    color: white;
    font-weight: lighter;
    padding-left: 22px;
}


main #filter-icon {
    max-width: 50%;
    height: 50%;
    margin-left: 20px;
}
main #x-icon {
    max-width: 50%;
    height: 50%;
    margin-left: 5px;
}

main {

    text-align: center;
    margin: 10px auto;
}

/* Filter buttons */

#sorting-options {

    top: 200px;
    position: absolute; /*make relative*/
    display: none;
    /*display: block; once visible*/
}

button {
    background-color: #288B6D;
    display: flex;
    border-style: solid;
    border-color:rgb(47, 153, 121);
    color: white;
    width: 130px;
}

button:hover {
    background-color: #2d9e7c;
}

#color-filter {
    
    padding-left: 5px;
 
}

.color-filter-button {
    display: none;
    width: 125px;
    font-style: italic;
}

/* /Filter buttons */

/* /New styles for the shopping page */

